<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brainfuck</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="program_code">Program Code</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="start_bracket">[</string>
    <string name="stop_bracket">]</string>
    <string name="print_char">.</string>
    <string name="read_char">,</string>
    <string name="blank"></string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="cursor">|</string>
    <string name="space">[Space]</string>
    <string name="move_left">◄</string>
    <string name="move_right">►</string>
    <string name="title_activity_input_output">Brainfuck</string>
    <string name="run">Run</string>
    <string name="del">[del]</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="title_activity_about">About</string>
    <string name="author">Authors</string>
    <string name="author_val">Sumit Gouthaman &amp; David Baines</string>
    <string name="contact">Contact</string>
    <string name="contact_val">Sumit Gouthaman\nhttp://twitter.com/sumitgouthaman\nsumitgt007@gmail.com\n\nDavid Baines\ndavid.peter.baines@gmail.com</string>
    <string name="other_projects">Other Projects</string>
    <string name="other_projects_val">http://github.com/sumitgouthaman\nhttps://github.com/darkrai9292</string>
    <string name="ran_out_of_input">Ran out of inputs!</string>
    <string name="ran_past_start_of_tape">Ran past start of tape!</string>
    <string name="ran_past_end_of_tape">Ran past end of tape! (max length: 30000)</string>
    <string name="ran_past_start_of_program">Ran past start of program!</string>
    <string name="ran_past_end_of_program">Ran past end of program!</string>
    <string name="paste"><![CDATA[<Paste>]]></string>
    <string name="no_text_in_clipboard">No text in clipboard</string>
    <string name="pasted_from_clipboard">Pasted code from clipboard</string>
    <string name="action_save">Save</string>
    <string name="please_input_filename">Please Input Filename:</string>
    <string name="about_maintain">Being Maintained by</string>
    <string name="about_maintainer">David Baines</string>
    <string name="about_maintainer_email">david.peter.baines@gmail.com</string>
    <string name="action_open">Open...</string>
    <string name="filename_text">File Name:</string>
    <string name="menu_save_as">Save As...</string>

</resources>
